add auth function
