# routes/index.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use("/", require("./swagger"));
-//router.use('/login', require('./login'));
+router.use('/auth', require('./auth'));
 router.use('/palettes', require('./palettes'));
 
 module.exports = router;
